correction recherche d'un groupe. Correction connection -> connexion.

--- a/src/LarpManager/Views/homepage/not_connected.twig
+++ b/src/LarpManager/Views/homepage/not_connected.twig
@@ -22,7 +22,7 @@
 			</p>
 			<p>
 				<center>
-					<a class="btn btn-primary" href="{{ path('user.login') }}">Connection</a>
+					<a class="btn btn-primary" href="{{ path('user.login') }}">Connexion</a>
 				</center>
 			</p>
 		</div>
