--- a/src/LarpManager/Views/admin/groupe/update.twig
+++ b/src/LarpManager/Views/admin/groupe/update.twig
@@ -23,7 +23,7 @@
 						<div class="panel-body">
 							{{ form_row(form.nom) }}
 							{{ form_row(form.description) }}
-							{{ form_row(form.territoire) }}
+							{{ form_row(form.territoires) }}
 						</div>
 					</div>
 
