--- a/src/LarpManager/Views/homepage/index.twig
+++ b/src/LarpManager/Views/homepage/index.twig
@@ -87,6 +87,13 @@
 				'link' :  path('trombine'),
 				'color' : "bg-success",
 				'icon': 'fa-camera' 
+				} %}
+				
+			{% include "link.twig" with {
+				'title' : "Le monde",
+				'link' :  path('world'),
+				'color' : "bg-success",
+				'icon': 'fa-globe' 
 				} %}	
 		</div>
 		
