--- a/src/LarpManager/Views/homepage/not_connected.twig
+++ b/src/LarpManager/Views/homepage/not_connected.twig
@@ -47,4 +47,21 @@
 	</div>
 </div>
 
+<div class="row">
+
+	<div class="col-xs-12 col-md-12">
+	
+		<div class="thumbnail">
+			<div class="caption">
+				<center><h3>Explorer l'Hyborée</h3></center>
+			</div>
+			
+			<p>
+				<center>
+					<a class="btn btn-primary" href="{{ path('world') }}">Voir la carte</a>
+				</center>
+			</p>
+		</div>
+	</div>
+</div>
 {% endblock content %}
