--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -46,6 +46,7 @@
 						<li><a href="{{ path('world') }}">Cartographie</a></li>
 						<li><a href="{{ path('langue') }}">Langues</a></li>
 						<li><a href="{{ path('ressource') }}">Ressources</a></li>
+						<li><a href="{{ path('construction') }}">Constructions</a></li>
 						<li><a href="{{ path('religion') }}">Religions</a></li>
 						<li><a href="{{ path('religion.level') }}">Fanatisme</a></li>
 						<li><a href="{{ path('background.list') }}">Backgrounds</a></li>
