--- a/src/LarpManager/Views/admin/territoire/list.twig
+++ b/src/LarpManager/Views/admin/territoire/list.twig
@@ -29,6 +29,7 @@
 							<div class="btn-group pull-right" role="group" aria-label="...">
 								<a href="{{ path('territoire.admin.detail', {'territoire': territoire.id}) }}" class="btn btn-primary" role="button">Détail</a>
 							    <a href="{{ path('territoire.admin.update', {'territoire': territoire.id}) }}" class="btn btn-default" role="button">Modifier</a>
+							    <a href="{{ path('territoire.admin.updateStrategie', {'territoire': territoire.id}) }}" class="btn btn-default" role="button">Stratégie</a>
 							</div>
 						</h4>
 						<p class="list-group-item-text">		
@@ -62,6 +63,7 @@
 								<div class="btn-group pull-right" role="group" aria-label="...">
 									<a href="{{ path('territoire.admin.detail', {'territoire': region.id}) }}" class="btn btn-primary" role="button">Détail</a>
 								    <a href="{{ path('territoire.admin.update', {'territoire': region.id}) }}" class="btn btn-default" role="button">Modifier</a>
+								    <a href="{{ path('territoire.admin.updateStrategie', {'territoire': region.id}) }}" class="btn btn-default" role="button">Stratégie</a>
 								</div>
 							</h4>
 							<p class="list-group-item-text">		
@@ -95,6 +97,7 @@
 									<div class="btn-group pull-right" role="group" aria-label="...">
 										<a href="{{ path('territoire.admin.detail', {'territoire': fief.id}) }}" class="btn btn-primary" role="button">Détail</a>
 									    <a href="{{ path('territoire.admin.update', {'territoire': fief.id}) }}" class="btn btn-default" role="button">Modifier</a>
+									    <a href="{{ path('territoire.admin.updateStrategie', {'territoire': fief.id}) }}" class="btn btn-default" role="button">Stratégie</a>
 									</div>
 								</h4>
 								<p class="list-group-item-text">		
