Ajout de la page de surveillance de la diplomatie entre groupe.

--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -51,6 +51,7 @@
 						<li><a href="{{ path('religion.level') }}">Fanatisme</a></li>
 						<li><a href="{{ path('background.list') }}">Backgrounds</a></li>
 						<li><a href="{{ path('chronologie') }}">Chronologie</a></li>
+						<li><a href="{{ path('groupe.diplomatie') }}">Diplomatie</a></li>
 					</ul>
 				</li>
 			{% endif %}
