Gestion des fichiers de règles.

--- a/src/LarpManager/Views/admin/groupe/add.twig
+++ b/src/LarpManager/Views/admin/groupe/add.twig
@@ -24,7 +24,7 @@
 							{{ form_row(form.nom) }}
 							{{ form_row(form.pj) }}
 							{{ form_row(form.description) }}
-							{{ form_row(form.territoire) }}
+							{{ form_row(form.territoires) }}
 						</div>
 					</div>
 
