--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -32,6 +32,7 @@
 						<li><a href="{{ path('admin') }}">Administration</a></li>
 						<li><a href="{{ path('trombinoscope') }}">Trombinoscope</a></li>
 						<li><a href="{{ path('admin.rappels') }}">rappels</a></li>
+						<li><a href="{{ path('rules.admin') }}">Règles</a></li>
 					</ul>
 				</li>
 			{% endif %}
@@ -101,6 +102,7 @@
 						<li><a href="{{ path('religion.list') }}">Les religions</a></li>
 						<li><a href="{{ path('personnageSecondaire.list') }}">Les personnages secondaires</a></li>
 						<li><a href="{{ path('world') }}">Carte</a></li>
+						<li><a href="{{ path('rules') }}">Règles</a></li>
 						
 					</ul
 				</li>
